devops/project/k8s/backend/base/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: exam-system
  namespace: exam-system
spec:
  selector:
    app: exam-system

  ports:
  - name: http
    port: 8080
    targetPort: 8080

  type: ClusterIP
