devops/project/k8s/backend/base/backend-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: exam-system
  namespace: exam-system
spec:
  parentRefs:
    - name: exam-system
      namespace: exam-system
  hostnames:
    - api.shixiaochuang.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: exam-system
          port: 8080
